# walklog

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: README.md  build.gradle.kts  proguard-rules.pro
benchmark/: README.md  build.gradle.kts
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
core/analytics/: README.md  build.gradle.kts
core/common/: README.md  build.gradle.kts
core/data/: README.md  build.gradle.kts
core/database/: README.md  build.gradle.kts
core/datastore/: README.md  build.gradle.kts
core/designsystem/: README.md  build.gradle.kts
core/domain/: README.md  build.gradle.kts
core/model/: README.md  build.gradle.kts
core/native/: README.md  build.gradle.kts
core/native/src/main/cpp/: CMakeLists.txt  walking_insights_engine.cpp  walking_insights_engine.h  walking_insights_jni.cpp
core/network/: build.gradle.kts
docs/: architecture-decisions.md  baseline-profile.md  litert-activity-classifier.md  ndk-jni-engine.md  proposal.md  r8-obfuscation.md  security.md  user-flow.md
feature/forecast/: README.md  build.gradle.kts
feature/history/: README.md  build.gradle.kts
feature/home/: README.md  build.gradle.kts
feature/mission/: README.md  build.gradle.kts
feature/onboarding/: README.md  build.gradle.kts
feature/recap/: README.md  build.gradle.kts
feature/report/: README.md  build.gradle.kts
feature/reward/: README.md  build.gradle.kts
feature/settings/: README.md  build.gradle.kts
feature/widget/: README.md  build.gradle.kts
gradle/: libs.versions.toml
(+266 files in other folders)
